--- a/package.json
+++ b/package.json
@@ -9,21 +9,38 @@
     "build": "nuxt build && backpack build",
     "start": "cross-env NODE_ENV=production node build/main.js",
     "precommit": "npm run lint",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "test": "npm run eslint && npm run mocha"
   },
   "dependencies": {
+    "@feathersjs/configuration": "^1.0.1",
+    "@feathersjs/errors": "^3.1.0",
+    "@feathersjs/express": "^1.1.2",
+    "@feathersjs/feathers": "^3.0.1",
+    "@feathersjs/socketio": "^3.0.1",
     "axios": "^0.17.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "compression": "^1.7.1",
+    "cors": "^2.8.4",
     "cross-env": "^5.0.1",
     "express": "^4.15.3",
+    "feathers-mongoose": "^5.1.2",
+    "helmet": "^3.9.0",
+    "mongoose": "^4.13.4",
     "nuxt": "^1.0.0-rc3",
-    "source-map-support": "^0.5.0"
+    "serve-favicon": "^2.4.5",
+    "source-map-support": "^0.5.0",
+    "winston": "^2.4.0"
   },
   "babel": {
     "presets": [
       "es2015"
     ]
+  },
+  "directories": {
+    "lib": "server",
+    "test": "server/test/"
   },
   "devDependencies": {
     "babel-eslint": "^8.0.2",
