--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.17.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "bootstrap": "^4.0.0-beta.2",
     "cross-env": "^5.0.1",
     "express": "^4.15.3",
     "nuxt": "^1.0.0-rc3",
@@ -35,6 +36,8 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1"
+    "eslint-plugin-standard": "^3.0.1",
+    "sass-loader": "^6.0.6",
+    "node-sass": "^4.6.0"
   }
 }
