--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "dev": "backpack dev",
     "build": "nuxt build && backpack build",
     "start": "cross-env NODE_ENV=production node build/main.js",
+    "eslint": "eslint server/. server/test/. --config .eslintrc.js --fix",
+    "mocha": "mocha server/test/ --recursive --exit",
     "precommit": "npm run lint",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "test": "npm run eslint && npm run mocha"
@@ -52,6 +54,7 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1"
+    "eslint-plugin-standard": "^3.0.1",
+    "mocha": "^4.0.1"
   }
 }
