--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   "scripts": {
     "dev": "backpack dev",
     "build": "nuxt build && backpack build",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore --config .eslintrc.js .",
+    "lint:fix": "eslint server/. server/test/. --config .eslintrc.js --fix",
     "start": "cross-env NODE_ENV=production node build/main.js",
-    "eslint": "eslint server/. server/test/. --config .eslintrc.js --fix",
-    "mocha": "mocha server/test/ --recursive --exit",
     "precommit": "npm run lint",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "test": "npm run eslint && npm run mocha"
+    "test": "npm run lint && npm run test:server",
+    "test:server": "npm run mocha",
+    "mocha": "nyc --reporter=html --reporter=text  mocha server/test/ --recursive --exit",
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "dependencies": {
     "@feathersjs/configuration": "^1.0.1",
@@ -47,6 +49,7 @@
   "devDependencies": {
     "babel-eslint": "^8.0.2",
     "backpack-core": "^0.4.1",
+    "coveralls": "^3.0.0",
     "eslint": "^4.3.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-loader": "^1.9.0",
@@ -55,6 +58,7 @@
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
-    "mocha": "^4.0.1"
+    "mocha": "^4.0.1",
+    "nyc": "^11.3.0"
   }
 }
