--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "nuxt": "^1.0.0-rc3",
     "serve-favicon": "^2.4.5",
     "source-map-support": "^0.5.0",
-    "winston": "^2.4.0"
+    "winston": "^2.4.0",
+    "vue-bootstrap-datetimepicker": "^4.1.0"
   },
   "babel": {
     "presets": [
@@ -63,8 +64,6 @@
     "mocha": "^4.0.1",
     "nyc": "^11.3.0",
     "sass-loader": "^6.0.6",
-    "node-sass": "^4.6.0",
-    "mocha": "^4.0.1"
-
+    "node-sass": "^4.6.0"
   }
 }
