add feathers store ssr

--- a/package.json
+++ b/package.json
@@ -68,8 +68,6 @@
     "mocha": "^4.0.1",
     "nyc": "^11.3.0",
     "sass-loader": "^6.0.6",
-    "node-sass": "^4.6.0",
-    "mocha": "^4.0.1"
-
+    "node-sass": "^4.6.0"
   }
 }
