--- a/package.json
+++ b/package.json
@@ -37,8 +37,9 @@
     "nuxt": "^1.0.0-rc3",
     "serve-favicon": "^2.4.5",
     "source-map-support": "^0.5.0",
-    "winston": "^2.4.0",
-    "vue-bootstrap-datetimepicker": "^4.1.0"
+    "vue-bootstrap-datetimepicker": "^4.1.0",
+    "vue-datetime-picker": "^0.2.1",
+    "winston": "^2.4.0"
   },
   "babel": {
     "presets": [
