--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "build": "nuxt build && backpack build",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore --config .eslintrc.js .",
     "lint:fix": "eslint server/. server/test/. --config .eslintrc.js --fix",
-    "start": "cross-env NODE_ENV=production node build/main.js",
+    "start": "node build/main.js",
     "precommit": "npm run lint",
     "test": "npm run lint && npm run test:server",
     "test:server": "npm run mocha",
     "mocha": "nyc --reporter=html --reporter=text  mocha server/test/ --recursive --exit",
-    "coverage": "nyc report --reporter=text-lcov | coveralls"
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "heroku-postbuild": "npm run build"
   },
   "dependencies": {
     "@feathersjs/authentication-client": "^1.0.1",
