--- a/package.json
+++ b/package.json
@@ -30,14 +30,23 @@
     "babel-preset-stage-2": "^6.24.1",
     "bootstrap": "^4.0.0-beta.2",
     "compression": "^1.7.1",
+    "cookie-storage": "^3.1.0",
     "cors": "^2.8.4",
     "cross-env": "^5.0.1",
     "express": "^4.15.3",
+    "feathers": "^2.2.3",
+    "feathers-authentication": "^1.3.1",
+    "feathers-authentication-hooks": "^0.1.5",
+    "feathers-authentication-jwt": "^0.3.2",
+    "feathers-authentication-local": "^0.4.4",
+    "feathers-hooks-common": "^3.10.0",
     "feathers-mongoose": "^5.1.2",
+    "feathers-socketio": "^2.0.1",
     "feathers-vuex": "^1.0.4",
     "helmet": "^3.9.0",
+    "js-cookie": "^2.2.0",
     "moment": "^2.19.2",
-    "mongoose": "^4.13.4",
+    "mongoose": "^4.13.5",
     "nuxt": "^1.0.0-rc3",
     "serve-favicon": "^2.4.5",
     "socket.io-client": "^2.0.4",
