--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "styleguide:build": "vue-styleguidist build"
   },
   "dependencies": {
+    "@feathersjs/authentication": "^2.1.2",
     "@feathersjs/authentication-client": "^1.0.2",
+    "@feathersjs/authentication-jwt": "^2.0.0",
+    "@feathersjs/authentication-local": "^1.1.0",
     "@feathersjs/client": "^3.4.2",
     "@feathersjs/configuration": "^1.0.2",
     "@feathersjs/errors": "^3.3.0",
@@ -39,20 +42,19 @@
     "cors": "^2.8.4",
     "cross-env": "^5.1.3",
     "express": "^4.15.3",
-    "feathers": "^2.2.4",
-    "feathers-authentication": "^1.3.1",
     "feathers-authentication-hooks": "^0.1.7",
-    "feathers-authentication-jwt": "^0.3.2",
-    "feathers-authentication-local": "^0.4.4",
+    "feathers-blob": "^1.4.1",
     "feathers-hooks": "^2.1.2",
     "feathers-hooks-common": "^4.8.0",
     "feathers-mongoose": "^6.0.0",
-    "feathers-socketio": "^2.0.1",
+    "feathers-nedb": "^3.0.0",
     "feathers-vuex": "^1.1.4",
+    "fs-blob-store": "^5.2.1",
     "helmet": "^3.11.0",
     "js-cookie": "^2.2.0",
     "moment": "^2.20.1",
     "mongoose": "^5.0.7",
+    "nedb": "^1.8.0",
     "nuxt": "^1.4.0",
     "serve-favicon": "^2.4.5",
     "socket.io-client": "^2.0.4",
@@ -88,6 +90,7 @@
     "node-sass": "^4.6.0",
     "nyc": "^11.5.0",
     "sass-loader": "^6.0.6",
+    "supertest": "^3.0.0",
     "vue-styleguidist": "^1.4.8"
   }
 }
