--- a/package.json
+++ b/package.json
@@ -63,6 +63,8 @@
     "vue-bootstrap-datetimepicker": "^4.1.3",
     "vue-datetime-picker": "^0.2.1",
     "vue-form-wizard": "^0.8.4",
+    "vue-password": "^1.1.2",
+    "vue2-dropzone": "^3.0.6",
     "vuejs-datepicker": "^0.9.26",
     "winston": "^2.4.0"
   },
