--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "feathers-hooks-common": "^4.8.0",
     "feathers-mongoose": "^6.0.0",
     "feathers-nedb": "^3.0.0",
+    "feathers-populate-hook": "^0.2.3",
     "feathers-vuex": "^1.1.4",
     "fs-blob-store": "^5.2.1",
     "helmet": "^3.11.0",
