--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "moment": "^2.20.1",
     "mongoose": "^5.0.7",
     "nedb": "^1.8.0",
-    "nuxt": "^1.4.0",
+    "nuxt": "^1.4.2",
     "serve-favicon": "^2.4.5",
     "socket.io-client": "^2.0.4",
     "source-map-support": "^0.5.3",
@@ -81,7 +81,7 @@
   "devDependencies": {
     "babel-eslint": "^8.2.2",
     "babili-webpack-plugin": "0.1.1",
-    "backpack-core": "^0.5.0",
+    "backpack-core": "^0.7.0",
     "coveralls": "^3.0.0",
     "eslint": "^4.18.1",
     "eslint-config-standard": "^11.0.0",
@@ -92,10 +92,11 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
     "mocha": "^5.0.1",
-    "node-sass": "^4.6.0",
+    "node-sass": "^4.9.3",
     "nyc": "^11.5.0",
+    "opencollective": "^1.0.3",
     "sass-loader": "^7.0.1",
     "supertest": "^3.0.0",
-    "vue-styleguidist": "^1.4.8"
+    "vue-styleguidist": "^1.8.4"
   }
 }
