--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ cache:
     - node_modules
 install:
   - npm install
-  - npm run build
+  - travis_wait npm run build
 script:
   - npm run test
 after_success:
